// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromotionScreen renders the PromotionScreen component when lose the prize 1`] = `
<div
  className="sc-htpNat lftjIv"
>
  <header
    className="sc-bdVaJa blMrvh"
  >
    <a
      href="#"
    >
      <img
        alt="CarNext logo"
        className="sc-bwzfXH hqJQNA"
        src="car-next-logo.png"
        title="CarNext logo"
      />
    </a>
  </header>
  <div
    className="sc-bxivhb hdqdbk"
  >
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Better luck next time!
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus. Quisque eleifend semper pretium.
      </p>
    </section>
  </div>
</div>
`;

exports[`PromotionScreen renders the PromotionScreen component when win the prize 1`] = `
<div
  className="sc-htpNat lftjIv"
>
  <header
    className="sc-bdVaJa blMrvh"
  >
    <a
      href="#"
    >
      <img
        alt="CarNext logo"
        className="sc-bwzfXH hqJQNA"
        src="car-next-logo.png"
        title="CarNext logo"
      />
    </a>
  </header>
  <div
    className="sc-bxivhb hdqdbk"
  >
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Congratulations, you won!
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus. Quisque eleifend semper pretium.
      </p>
    </section>
  </div>
</div>
`;

exports[`PromotionScreen renders the PromotionScreen default component 1`] = `
<div
  className="sc-htpNat lftjIv"
>
  <header
    className="sc-bdVaJa blMrvh"
  >
    <a
      href="#"
    >
      <img
        alt="CarNext logo"
        className="sc-bwzfXH hqJQNA"
        src="car-next-logo.png"
        title="CarNext logo"
      />
    </a>
  </header>
  <div
    className="sc-bxivhb hdqdbk"
  >
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Get a free year of driving!
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus. Quisque eleifend semper pretium. Sed rutrum odio lectus, id maximus nunc rhoncus sed. Praesent quis suscipit dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci dui, rutrum eu feugiat lobortis, tristique sollicitudin est. Nulla tincidunt semper nibh at pulvinar. Etiam tempor quam vitae neque ornare efficitur. Morbi id egestas est, at viverra orci. Fusce eleifend placerat ligula, eget viverra lectus facilisis vitae. Praesent placerat tortor a mi laoreet, quis lobortis nunc eleifend.
      </p>
    </section>
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Get a car leasing offer
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus.
      </p>
      <form
        className="sc-gzVnrw ibZhkv"
      >
        <div
          className="sc-htoDjs hZvHaw"
        >
          <div
            className="sc-dnqmqq hlbUkZ"
          >
            <label
              className="sc-iwsKbI dOiXxC"
              htmlFor="form--first-name"
            >
              First name
            </label>
            <input
              className="sc-gZMcBi gJdFSv"
              id="form--first-name"
              placeholder="Enter first name"
              type="text"
            />
          </div>
          <div
            className="sc-dnqmqq hlbUkZ"
          >
            <label
              className="sc-iwsKbI dOiXxC"
              htmlFor="form--surname"
            >
              Surname
            </label>
            <input
              className="sc-gZMcBi gJdFSv"
              id="form--surname"
              placeholder="Enter surname"
              type="text"
            />
          </div>
        </div>
        <div
          className="sc-dnqmqq hlbUkZ"
        >
          <label
            className="sc-iwsKbI dOiXxC"
            htmlFor="form--email"
          >
            Email address
          </label>
          <input
            className="sc-gZMcBi gJdFSv"
            id="form--email"
            placeholder="Enter your email address"
            type="email"
          />
        </div>
        <div
          className="sc-dnqmqq hlbUkZ"
        >
          <label
            className="sc-iwsKbI dOiXxC"
            htmlFor="form--phone"
          >
            Phone number
          </label>
          <input
            className="sc-gZMcBi gJdFSv"
            id="form--phone"
            placeholder="Enter your phone number"
            type="tel"
          />
        </div>
        <div
          className="sc-dnqmqq hlbUkZ"
        >
          <label
            className="sc-iwsKbI dOiXxC"
            htmlFor="form--voucher"
          >
            Voucher code
          </label>
          <input
            className="sc-gZMcBi gJdFSv"
            id="form--voucher"
            placeholder="Enter your voucher code"
            type="number"
          />
        </div>
        <div
          className="sc-dnqmqq hlbUkZ"
        >
          <input
            className="sc-VigVT juvwGh"
            id="form--policy"
            type="checkbox"
          />
          <span
            className="sc-jTzLTM dnRskf"
          />
          <label
            className="sc-gqjmRU lbtNyB"
            htmlFor="form--policy"
          >
            Accept Privacy Settlement
          </label>
        </div>
        <button
          className="sc-fjdhpX cuAGuH"
          type="submit"
        >
          <span
            className="sc-jzJRlG iqolyC"
          >
            Get Offer
          </span>
          <svg
            className="sc-cSHVUG hVuVMI"
          >
            arrow-right.svg
          </svg>
        </button>
      </form>
    </section>
  </div>
</div>
`;
